infra/route_table.tf
# --- Private
resource "aws_default_route_table" "private" {
  default_route_table_id = "${aws_vpc.main.default_route_table_id}"

  tags = "${
    merge(
      local.default-tags,
      map(
        "Name", "james.lucktaylor.rtb.private",
      )
    )
  }"
}

resource "aws_route_table_association" "private" {
  count          = "${length(data.aws_availability_zones.available.names)}"
  route_table_id = "${aws_default_route_table.private.id}"
  subnet_id      = "${element(aws_subnet.private.*.id, count.index)}"
}

# --- Public
resource "aws_route_table" "public" {
  vpc_id = "${aws_vpc.main.id}"

  tags = "${
    merge(
      local.default-tags,
      map(
        "Name", "james.lucktaylor.rtb.public",
      )
    )
  }"
}

resource "aws_route_table_association" "public" {
  count          = "${length(data.aws_availability_zones.available.names)}"
  route_table_id = "${aws_route_table.public.id}"
  subnet_id      = "${element(aws_subnet.public.*.id, count.index)}"
}

resource "aws_route" "public-igw" {
  destination_cidr_block = "0.0.0.0/0"
  gateway_id             = "${aws_internet_gateway.main.id}"
  route_table_id         = "${aws_route_table.public.id}"
}
